# the-inkbound

./: .gitignore  README.md  package-lock.json  package.json
Inkbound Logo/: Inkbound Logo - Exploracao.dc.html  Inkbound Logo - Final.dc.html
docs/: fase-1-setup-infraestrutura.md  fase-10-editor-avancado.md  fase-11-configuracoes-sistema.md  fase-2-fundacao-frontend.md  fase-3-motor-local.md  fase-4-editor-logica-negocio.md  fase-5-cloud-sync.md  fase-6-identidade-visual.md  fase-9-exportacao-manuscrito.md
src/: App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: credential_store.rs  exportacao.rs  google_auth.rs  google_drive.rs  lib.rs  main.rs
src/components/: Configuracoes.jsx  LogoMarca.jsx  LogoMarcaAnimada.jsx  TelaCarregamento.jsx  ToggleIdioma.jsx  ToggleTema.jsx
src/components/dashboard/: ContaGoogle.jsx  Dashboard.jsx  NewProjectModal.jsx
src/components/workspace/: Editor.jsx  ExportarManuscrito.jsx  FichaForm.jsx  Fichas.jsx  HistoricoVersoes.jsx  MetaEscrita.jsx  Sidebar.jsx  SincronizacaoDrive.jsx  Workspace.jsx
src/hooks/: useExportarManuscrito.js  useSincronizacaoDrive.js
src/i18n/: index.js
src/lib/: arvoreArquivos.js  atualizacoes.js  db.js  documentos.js  driveSync.js  exportarManuscrito.js  fichas.js  googleAuth.js  metas.js  palavras.js  paths.js  projetos.js  tempo.js  versoes.js
src/store/: useAppStore.js  useAtualizacaoStore.js  useConfiguracoesStore.js  useContaGoogleStore.js  useIdiomaStore.js  useTemaStore.js
(+2 files in other folders)
